--- a/css/media480max.css
+++ b/css/media480max.css
@@ -271,8 +271,8 @@ nav ul{
     color: white;
     padding: 5px;
     position: absolute;
-    right: 30px;
-    top: 30px;
+    right: 40px;
+    top: 35px;
 }
 
 .btn{
@@ -284,7 +284,7 @@ nav ul{
     text-decoration-line: none;
     float: right;
     position: relative;
-    bottom: 55px;
+    bottom: 47px;
     right: 20px;
 }
 #secsec{
@@ -424,6 +424,9 @@ footer{
    margin: 0px;
    padding: 0px;
 }
+.footlist{
+    font-family: 'ubunturegular';
+}
 .footlist li {
     list-style-type: none;
     line-height: 25px;  
@@ -441,8 +444,8 @@ footer{
     margin-top: 50px;
 }
 .copy {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
     /*display: inline-block;*/
     padding: 3px;
